--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
             <version>17.1.1</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.15.1</version>
+        </dependency>
     </dependencies>
 
 </project>
